# minikube-on-fedora

./: .gitignore  17-capstone.md  CONTRIBUTING.md  GETTING-STARTED.md  Gemfile  LESSONS-LEARNED.md  LICENSE  PRD.md  README.md  STARTING-WITH-CLAUDE.md  _config.yml  apply-r21.sh  index.html  r18-INSTRUCTIONS.md  r18a-INSTRUCTIONS.md  r18b-INSTRUCTIONS.md  r20-INSTRUCTIONS.md  r21-INSTRUCTIONS.md  test-r21.sh
_docs/: 00-outline.md  01-prerequisites.md  02-installation.md  03-starting-minikube.md  04-profiles-multi-node.md  05-addons-dashboard.md  06-deploying-with-kubectl.md  07-services-nodeport.md  08-persistent-volumes.md  09-helm.md  10-editor-shell-terminal.md  11-istio.md  12-keda.md  13-alternatives.md  13-wrap-up.md  14-faq.md  15-where-to-go-next.md  16-examples.md  17-capstone-r21-prose-insert.md  17-capstone.md  17-capstone.md.NEW  17.1-concepts-and-principles.md  17.2-kubernetes-substrate.md  17.3-services-and-data-products.md  17.4-contracts-and-catalog.md  17.5-data-planes.md  17.6-progressive-delivery-mtls.md  17.7-elastic-and-resilient.md  17.8-observability.md  17.9-anti-patterns.md
_example_pages/: 03-driver-check.md  06-deploy-nginx-kubectl.md  07-nodeport-service.md  08-persistent-volume.md  09-deploy-nginx-helm.md  11-istio.md  (+2 more)
examples/17-capstone/services/graphql-gateway/: Containerfile  README.md  pyproject.toml
examples/17-capstone/services/graphql-gateway/app/: clients.py  config.py  main.py  schema.py
examples/17-capstone/services/order-service/: Containerfile  README.md  pyproject.toml
examples/17-capstone/services/order-service/app/: config.py  db.py  events.py  inventory_client.py  main.py  models.py  schemas.py
examples/17-capstone/services/order-service/schemas/: order-placed.avsc
examples/17-capstone/services/order-service/tests/: test_orders.py
(+299 files in other folders)
