[tool.poetry]
name = "graphql-gateway"
version = "0.1.0"
description = "Federated GraphQL read layer for the §17 capstone — orchestrates order (REST) + inventory (gRPC)"
authors = ["patterncatalyst"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
strawberry-graphql = ">=0.288,<1.0"
httpx = "^0.27.0"
grpcio = "^1.66.0"
protobuf = ">=5.26,<6"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
