[tool.poetry]
name = "order-service"
version = "0.4.0"
description = "Order-service data product for the §17 capstone — REST + Postgres + gRPC client to inventory (GraphQL, Kafka added later)"
authors = ["patterncatalyst"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
grpcio = "^1.66.0"
protobuf = ">=5.26,<6"
aiokafka = ">=0.12,<1.0"
fastavro = "^1.9.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
grpcio-tools = "^1.66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
